fixed a spacing issue

--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -18,21 +18,22 @@
     .about-holder {
         display: flex;
         flex-wrap: wrap;
+        justify-content: space-between;
         list-style-type: none;
         box-sizing: border-box;
     }
     .about-item {
         flex-basis: 30%;
-        margin-right: 1.5rem;
         box-sizing: border-box;
-        padding-right: 2%;
+        padding-right: 3%;
         h3 {
             font-family: 'Abril Fatface', cursive;
             margin-bottom: 0;
-            font-size: 1.4rem;
-        }
+            font-size: 1.5rem;
+            line-height: 40px;
+                  }
         p {
-            text-align: justify;
+            // text-align: justify;
             font-size: 1.2rem;
             margin-top: 0.2rem;
         }
